--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   webserver:
     build:
@@ -63,3 +61,10 @@ services:
       - REDIS_HOSTS=local:redis:${REDIS_PORT}
     ports:
       - "${REDIS_COMMANDER_PORT}:8081"
+  fastapi:
+    container_name: fastapi
+    build: ./bin/api
+    ports:
+      - "8081:80"
+    volumes:
+      - ${FASTAPI_ROOT}:/code/app
